# oauthscan

./: .replit  app.py  config.py  main.py  pyproject.toml  vision.py
blueprints/: instagram.py
static/: scan_images.js
