[tool.poetry]
name = "repl-nix-oauthscan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_oauthscan"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
openai = "^1.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
